[gd_scene load_steps=32 format=3 uid="uid://irt5uxwav2hy"]

[ext_resource type="Script" uid="uid://btyyyowb2mj6y" path="res://scripts/enemy.gd" id="1_1vja8"]
[ext_resource type="Texture2D" uid="uid://c6vm58r3pvj70" path="res://assets/Butterfly.png" id="2_iwav8"]
[ext_resource type="Texture2D" uid="uid://bvp3vsp52cyw1" path="res://assets/Frog.png" id="3_1i2q2"]
[ext_resource type="Texture2D" uid="uid://cdqogg0lhumif" path="res://assets/Mr_jelly.png" id="4_ly5gv"]
[ext_resource type="Texture2D" uid="uid://dvkb12wbxbhth" path="res://assets/UFO.png" id="5_82o86"]
[ext_resource type="Texture2D" uid="uid://bac5id3c77j3x" path="res://assets/Pinky.png" id="6_1gqeq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_55jtl"]
size = Vector2(15.3333, 14.3333)

[sub_resource type="AtlasTexture" id="AtlasTexture_isvm2"]
atlas = ExtResource("2_iwav8")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr8dl"]
atlas = ExtResource("2_iwav8")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqv8b"]
atlas = ExtResource("6_1gqeq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_li06d"]
atlas = ExtResource("6_1gqeq")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_voue8"]
atlas = ExtResource("6_1gqeq")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_obj4n"]
atlas = ExtResource("6_1gqeq")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_axa8o"]
atlas = ExtResource("3_1i2q2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4iqch"]
atlas = ExtResource("3_1i2q2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3f71"]
atlas = ExtResource("3_1i2q2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksmwx"]
atlas = ExtResource("3_1i2q2")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oq86d"]
atlas = ExtResource("3_1i2q2")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_joqoj"]
atlas = ExtResource("3_1i2q2")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_govun"]
atlas = ExtResource("3_1i2q2")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwoi6"]
atlas = ExtResource("3_1i2q2")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g512e"]
atlas = ExtResource("3_1i2q2")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pl6g4"]
atlas = ExtResource("3_1i2q2")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1yns"]
atlas = ExtResource("4_ly5gv")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fyuy"]
atlas = ExtResource("4_ly5gv")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5i3e"]
atlas = ExtResource("5_82o86")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_16wof"]
atlas = ExtResource("5_82o86")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkgyc"]
atlas = ExtResource("5_82o86")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i63jh"]
atlas = ExtResource("5_82o86")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ly5gv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_isvm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr8dl")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqv8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_li06d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_voue8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obj4n")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_axa8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4iqch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3f71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksmwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oq86d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joqoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_govun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwoi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g512e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl6g4")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1yns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fyuy")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5i3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16wof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkgyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i63jh")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1vja8"]

[node name="Enemy" type="CharacterBody2D"]
scale = Vector2(3, 3)
script = ExtResource("1_1vja8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.38419e-07, -0.5)
shape = SubResource("RectangleShape2D_55jtl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ly5gv")
animation = &"0"

[node name="Damage_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damage_Area"]
shape = SubResource("RectangleShape2D_1vja8")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Damage_Area" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="Damage_Area" to="." method="_on_damage_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
